Fix visibility issue

--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ input:focus {
   transform: translateY(-10px);
   transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
   opacity: 0;
+  z-index: 9999;
 }
 
 #password-container,
@@ -332,6 +333,7 @@ input#password:focus ~ ul.validation,
 input#confirm-password:focus ~ .confirm-error {
   opacity: 1;
   transform: translateY(0);
+  z-index: 99999;
 }
 
 .validation li,
